--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,10 @@ pytest-pythonpath==0.7.3
 requests==2.26.0
 Pillow==8.3.1
 sorl-thumbnail==12.7.0
+Autopep8 #autopep8 ./ --recursive --in-place -a
+isort #isort .
+Black #black --line-length 78 example.py
+autoflake # autoflake --in-place --remove-all-unused-imports --remove-unused-variables -r ./
+unify #unify --in-place -r .
+
+coverage #coverage run --source='posts,users' manage.py test -v 2
